--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -74,7 +74,7 @@
                     <div class="one wide field "></div>
                 </div><br>
                 <div class="ui stackable center aligned page grid">
-                    <button class="ui mini primary button" type="button" (click)="onSearch()"><i class="search icon"></i>ค้นหา</button>
+                    <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i>ค้นหา</button>
                     <button class="ui mini gray button " type="button" (click)="clear()"><i class="delete icon"></i>ล้างข้อมูล</button>
                 </div><br>
             </form>
