--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -3,7 +3,7 @@
         <h2 class="ui header">ตรวจสอบงบสรุปยอดภาษี</h2>
 
         <div class="ui top attached header">
-            <span>รายงานการใช้ใบเสร็จรับเงิน
+            <span>รายงานการใช้ใบเสร็จรับเงินภาษีสรรพสามิต
             </span>
         </div>
 
@@ -17,11 +17,11 @@
                         <th>จำนวนใบเสร็จ</th>
                         <th>จำนวนเงิน</th>
                         <th>มหาดไทย
-                            <br/>10%</th>
+                            <br />10%</th>
                         <th>นำส่งมหาดไทย
-                            <br/>95%</th>
+                            <br />95%</th>
                         <th>เงินฝาก/ค่าใช้จ่าย
-                            <br/>5%</th>
+                            <br />5%</th>
                         <th> ชดเชยกรมศุลฯ
                             <br>0.75%</th>
                         <th>ค่าพิมพ์แสตมป์ 1%</th>
@@ -372,11 +372,11 @@
                         <th>จำนวนใบเสร็จ</th>
                         <th>จำนวนเงิน</th>
                         <th>มหาดไทย
-                            <br/>10%</th>
+                            <br />10%</th>
                         <th>นำส่งมหาดไทย
-                            <br/>95%</th>
+                            <br />95%</th>
                         <th>เงินฝาก/ค่าใช้จ่าย
-                            <br/>5%</th>
+                            <br />5%</th>
                         <th> ชดเชยกรมศุลฯ
                             <br>0.75%</th>
                         <th>ค่าพิมพ์แสตมป์ 1%</th>
