--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-2/int06-11-2.component.html
@@ -577,12 +577,12 @@
 
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui  grey button" type="button">
-          <i class="close icon"></i>ยกเลิก</button>
         <button class="ui  primary button" type="button">
           <i class="save icon"></i>บันทึก</button>
-        <button class="ui  primary button" type="button">
+        <button class="ui Yellow button" type="button">
           <i class="print icon"></i>ส่งออก</button>
+          <button class="ui button" type="button" routerLink='/int06/11'>
+            <i class="close icon"></i>ยกเลิก</button>
       </div>
     </div>
 
