--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-4/int06-11-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-4/int06-11-4.component.html
@@ -514,7 +514,7 @@
         <div class="sixteen wide column">
           <button class="ui  primary button" type="button">
             <i class="save icon"></i>บันทึก</button>
-          <button class="ui Yellow button" type="button">
+          <button class="ui yellow button" type="button">
             <i class="print icon"></i>ส่งออก</button>
             <button class="ui button" type="button" routerLink='/int06/11'>
               <i class="close icon"></i>ยกเลิก</button>
