--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
@@ -152,7 +152,7 @@
             <div class="field">
               <button class="ui primary button" [disabled]="form.controls.bill.value == ''" type="submit">
                 <i class="plus icon"></i>
-                สร้าง
+                รายการใหม่
               </button>
             </div>
           </div>
