ingfah User UAT

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -72,7 +72,7 @@
                     <a class="item " [routerLink]="[ '/int01/5/1'] " *ngIf="authService.renderByPage('int01/5/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบสถิติการชำระภาษีของผู้ประกอบการ</a>
                     <a class="item " [routerLink]="[ '/int01/6/1'] " *ngIf="authService.renderByPage('int01/6/1')"
-                        routerLinkActive="active " style=" color:White ">ตรวจสอบสถติการต่ออายุใบอนุญาตของผู้ประกอบการ</a>
+                        routerLinkActive="active " style=" color:White ">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
                     <a class="item " [routerLink]="[ '/int01/7/1'] " *ngIf="authService.renderByPage('int01/7/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
                     <a class="item " [routerLink]="[ '/int01/9/1'] " *ngIf="authService.renderByPage('int01/9/1')"
