--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -49,7 +49,7 @@
                             <th style="text-align: center;">วันที่ออกใบอนุญาต</th>
                             <th style="text-align: center;">วันที่นำส่งเงิน<br>(ระบบรายได้)</th>
                             <th style="text-align: center;">ประเภทใบอนุญาต</th>
-                            <th style="text-align: center;">เลขแบบพิมพ์</th>
+                            <th style="text-align: center;">เลขที่แบบพิมพ์</th>
                             <th style="text-align: center;">เลขที่ใบอนุญาต</th>
                             <th style="text-align: center;">จำนวนเงินจากระบบ</th>
                             <th style="text-align: center;">จำนวนเงินจากสำเนาใบอนุญาต</th>
@@ -61,8 +61,6 @@
                         </tr>
                     </thead>
                     <tbody>
-
-
                     </tbody>
                 </table>
             </div>
